<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('shuttle_tariffs', function (Blueprint $table) {
            $table->id();
            $table->string('area_from');
            $table->string('area_to');
            $table->decimal('estimated_distance_km', 8, 2);
            $table->integer('estimated_duration_minutes');
            $table->unsignedBigInteger('tariff');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('shuttle_tariffs');
    }
};
